--- a/software/comms_module/SmartBandage/.project
+++ b/software/comms_module/SmartBandage/.project
@@ -386,7 +386,7 @@
 	<variableList>
 		<variable>
 			<name>CC26XXWARE</name>
-			<value>file:/F:/ti/tirtos_simplelink_2_13_00_06/products/cc26xxware_2_21_01_15600</value>
+			<value>$%7BTI_DIR%7D/tirtos_simplelink_2_13_00_06/products/cc26xxware_2_21_01_15600</value>
 		</variable>
 		<variable>
 			<name>ORG_PROJ_DIR</name>
@@ -394,7 +394,7 @@
 		</variable>
 		<variable>
 			<name>ORIGINAL_PROJECT_ROOT</name>
-			<value>file:/F:/ti/simplelink/ble_cc26xx_2_01_00_44423/Projects/ble/SimpleBLEPeripheral/CC26xx/CCS/SimpleBLEPeripheral</value>
+			<value>$%7BTI_DIR%7D/simplelink/ble_cc26xx_2_01_00_44423/Projects/ble/SimpleBLEPeripheral/CC26xx/CCS/SimpleBLEPeripheral</value>
 		</variable>
 		<variable>
 			<name>TI_RTOS_BOARD_BASE</name>
@@ -402,7 +402,7 @@
 		</variable>
 		<variable>
 			<name>TI_RTOS_DRIVERS_BASE</name>
-			<value>file:/F:/ti/tirtos_simplelink_2_13_00_06/packages</value>
+			<value>$%7BTI_DIR%7D/tirtos_simplelink_2_13_00_06/packages</value>
 		</variable>
 	</variableList>
 </projectDescription>
