--- a/software/comms_module/SmartBandageBLEStack/.project
+++ b/software/comms_module/SmartBandageBLEStack/.project
@@ -141,6 +141,16 @@
 			<locationURI>PARENT-7-ORG_PROJ_DIR/Components/ble/include/sm.h</locationURI>
 		</link>
 		<link>
+			<name>LIB/CC2640Stack.a</name>
+			<type>1</type>
+			<locationURI>PROJECT_LOC/LIB/CC2640Stack.a</locationURI>
+		</link>
+		<link>
+			<name>LIB/CC2640Stack_HCI_TL.a</name>
+			<type>1</type>
+			<locationURI>PROJECT_LOC/LIB/CC2640Stack_HCI_TL.a</locationURI>
+		</link>
+		<link>
 			<name>NPI/npi.c</name>
 			<type>1</type>
 			<locationURI>PARENT-5-ORG_PROJ_DIR/common/npi/npi_np/CC26xx/Stack/npi.c</locationURI>
