--- a/software/comms_module/SmartBandage/TOOLS/appBLE.cfg
+++ b/software/comms_module/SmartBandage/TOOLS/appBLE.cfg
@@ -1,4 +1,5 @@
 var ROM = xdc.useModule('ti.sysbios.rom.ROM');
+var TIRTOS = xdc.useModule('ti.tirtos.TIRTOS');
 ROM.romName = ROM.CC2650;
 
 var Defaults = xdc.useModule('xdc.runtime.Defaults');
@@ -128,3 +129,7 @@ Power.calibrateRCOSC = true;
 
 /* 10 us tick period */
 Clock.tickPeriod = 10;
+TIRTOS.useI2C = true;
+TIRTOS.useSPI = false;
+TIRTOS.useUART = false;
+TIRTOS.libType = TIRTOS.LibType_NonInstrumented;
