Add the I2C code and headers for MCP9808.
The I2C code implements a multi-threaded I2C interface.

The MCP9808 headers are not complete. It could likely use some convenience
functions, and some functions for the configuration.

See #5, #6

--- a/software/comms_module/SmartBandage/TOOLS/appBLE.cfg
+++ b/software/comms_module/SmartBandage/TOOLS/appBLE.cfg
@@ -1,5 +1,6 @@
 var ROM = xdc.useModule('ti.sysbios.rom.ROM');
 var TIRTOS = xdc.useModule('ti.tirtos.TIRTOS');
+var SysMin = xdc.useModule('xdc.runtime.SysMin');
 ROM.romName = ROM.CC2650;
 
 var Defaults = xdc.useModule('xdc.runtime.Defaults');
@@ -42,7 +43,8 @@ Defaults.common$.memoryPolicy = Types.CREATE_POLICY;
 Text.isLoaded = false;
 
 /* Use the minimal user-supplied callback provider */
-System.SupportProxy = SysCallback;
+/*System.SupportProxy = SysCallback;*/
+System.SupportProxy = SysMin;
 /* no exit handlers needed */
 System.maxAtexitHandlers = 0;
 
