--- a/software/comms_module/SmartBandageBLEStack/.cproject
+++ b/software/comms_module/SmartBandageBLEStack/.cproject
@@ -37,8 +37,8 @@
 								<option id="com.ti.ccstudio.buildDefinitions.TMS470_15.12.compilerID.OPT_FOR_SPEED.585884835" name="Speed vs. size trade-offs (--opt_for_speed, -mf)" superClass="com.ti.ccstudio.buildDefinitions.TMS470_15.12.compilerID.OPT_FOR_SPEED" value="com.ti.ccstudio.buildDefinitions.TMS470_15.12.compilerID.OPT_FOR_SPEED.1" valueType="enumerated"/>
 								<option id="com.ti.ccstudio.buildDefinitions.TMS470_15.12.compilerID.INCLUDE_PATH.1720834100" name="Add dir to #include search path (--include_path, -I)" superClass="com.ti.ccstudio.buildDefinitions.TMS470_15.12.compilerID.INCLUDE_PATH" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${CG_TOOL_ROOT}/include&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;F:\ti\tirtos_simplelink_2_13_00_06\products\bios_6_42_00_08\packages&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;F:\ti\xdctools_3_31_01_33_core\packages&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${TI_DIR}\tirtos_simplelink_2_13_00_06\products\bios_6_42_00_08\packages&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${TI_DIR}\xdctools_3_31_01_33_core\packages&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${TI_DIR}\tirtos_simplelink_2_13_00_06\packages&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${PROJECT_LOC}\..\SmartBandage\Application&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ORG_PROJ_DIR}/../../../Source/Stack&quot;"/>
