Fix nasty bug in ICall framework, inc. heap
Fixed a nasty bug in the ICall framework on line 1241 of ICall.c wherein
it was trying to start a timer with timeout 0 (not allowed) and getting
stuck in an ON error loop. This fix doesn't fix whatever was causing this,
but afterwards it all seems to work.

Increased the size of the heap because we were running out. Commented out
FSM.c. We don't have enough memory for that function pointer struct
unfortunately.

--- a/software/comms_module/SmartBandage/TOOLS/appBLE.cfg
+++ b/software/comms_module/SmartBandage/TOOLS/appBLE.cfg
@@ -1,7 +1,6 @@
-var ROM = xdc.useModule('ti.sysbios.rom.ROM');
 var TIRTOS = xdc.useModule('ti.tirtos.TIRTOS');
 var SysMin = xdc.useModule('xdc.runtime.SysMin');
-ROM.romName = ROM.CC2650;
+var LoggingSetup = xdc.useModule('ti.uia.sysbios.LoggingSetup');
 
 var Defaults = xdc.useModule('xdc.runtime.Defaults');
 var Types = xdc.useModule('xdc.runtime.Types');
@@ -22,6 +21,8 @@ var Semaphore = xdc.useModule('ti.sysbios.knl.Semaphore');
 var Hwi = xdc.useModule('ti.sysbios.hal.Hwi');
 var M3Hwi = xdc.useModule('ti.sysbios.family.arm.m3.Hwi');
 var Power = xdc.useModule('ti.sysbios.family.arm.cc26xx.Power');
+var Idle = xdc.useModule('ti.sysbios.knl.Idle');
+var Timestamp = xdc.useModule('xdc.runtime.Timestamp');
 
 /* Enable idle task (default). */
 Task.enableIdleTask = true;
@@ -54,7 +55,7 @@ Program.stack = 1024;
 Program.argSize = 0;
 
 /* build a custom, optimized version of SYS/BIOS */
-BIOS.libType = BIOS.LibType_Custom;
+BIOS.libType = BIOS.LibType_NonInstrumented;
 
 /* no logging - all compiled out */
 BIOS.logsEnabled = false;
@@ -97,7 +98,7 @@ M3Hwi.vectorTableAddress  = 0x20000000;
 M3Hwi.NUM_INTERRUPTS = 50;
 
 /* Set heap size */
-BIOS.heapSize = 1668;
+BIOS.heapSize = 2048;
 
 var Swi = xdc.useModule('ti.sysbios.knl.Swi');
 Swi.numPriorities = 6;
@@ -134,4 +135,25 @@ Clock.tickPeriod = 10;
 TIRTOS.useI2C = true;
 TIRTOS.useSPI = false;
 TIRTOS.useUART = false;
+
+var debug = false;
+if (debug) {
 TIRTOS.libType = TIRTOS.LibType_NonInstrumented;
+	BIOS.common$.diags_ASSERT = Diags.ALWAYS_ON;
+	BIOS.common$.diags_ENTRY = Diags.ALWAYS_ON;
+	BIOS.common$.diags_EXIT = Diags.ALWAYS_ON;
+	BIOS.common$.diags_INTERNAL = Diags.ALWAYS_ON;
+	BIOS.common$.diags_LIFECYCLE = Diags.ALWAYS_ON;
+	BIOS.common$.diags_USER2 = Diags.ALWAYS_ON;
+	BIOS.common$.diags_USER1 = Diags.ALWAYS_ON;
+	BIOS.common$.diags_USER3 = Diags.ALWAYS_ON;
+	BIOS.common$.diags_USER4 = Diags.ALWAYS_ON;
+	BIOS.common$.diags_USER5 = Diags.ALWAYS_ON;
+	BIOS.common$.diags_USER6 = Diags.ALWAYS_ON;
+	BIOS.common$.diags_INFO = Diags.ALWAYS_ON;
+	BIOS.common$.diags_ANALYSIS = Diags.ALWAYS_ON;
+	Defaults.common$.diags_INTERNAL = Diags.ALWAYS_ON;
+} else {
+	var ROM = xdc.useModule('ti.sysbios.rom.ROM');
+	ROM.romName = ROM.CC2650;
+}
