Add work on flash and STC3115

--- a/software/comms_module/SmartBandage/TOOLS/appBLE.cfg
+++ b/software/comms_module/SmartBandage/TOOLS/appBLE.cfg
@@ -136,6 +136,9 @@ TIRTOS.useI2C = true;
 TIRTOS.useSPI = false;
 TIRTOS.useUART = false;
 
+/* Enable more printf formats */
+System.extendedFormats = '%$L%$S%$F%f';
+
 var debug = false;
 if (debug) {
 TIRTOS.libType = TIRTOS.LibType_NonInstrumented;
