Work on the notification of BLE attributes.
This commit contains the showstopper bluetooth I believe is caused by
talking to the bluetooth stack from the peripheral manager task as opposed
to a thread registered through ICall

--- a/software/comms_module/SmartBandage/TOOLS/appBLE.cfg
+++ b/software/comms_module/SmartBandage/TOOLS/appBLE.cfg
@@ -70,7 +70,7 @@ Task.numPriorities = 6;
 Task.defaultStackSize = 512;
 
 /* Don't check stacks for overflow - saves cycles (and power) and Flash */
-Task.checkStackFlag = false;
+Task.checkStackFlag = true;
 
 /* Disable exception handling to save Flash - undo during active development */
 M3Hwi.enableException = true;
@@ -107,7 +107,7 @@ BIOS.swiEnabled = true;
 BIOS.includeXdcRuntime = true;
 
 /* Tasks cannot pend based on priority */
-Semaphore.supportsPriority = false;
+Semaphore.supportsPriority = true;
 
 /* Change default error function -- just spin */
 Error.policyFxn = Error.policySpin;
@@ -141,7 +141,7 @@ System.extendedFormats = '%$L%$S%$F%f';
 
 var debug = false;
 if (debug) {
-TIRTOS.libType = TIRTOS.LibType_NonInstrumented;
+	TIRTOS.libType = TIRTOS.LibType_Instrumented;
 	BIOS.common$.diags_ASSERT = Diags.ALWAYS_ON;
 	BIOS.common$.diags_ENTRY = Diags.ALWAYS_ON;
 	BIOS.common$.diags_EXIT = Diags.ALWAYS_ON;
