Integrate FSM with system and work on better bluetooth connection

--- a/software/comms_module/SmartBandage/TOOLS/appBLE.cfg
+++ b/software/comms_module/SmartBandage/TOOLS/appBLE.cfg
@@ -139,9 +139,10 @@ TIRTOS.useUART = false;
 /* Enable more printf formats */
 System.extendedFormats = '%$L%$S%$F%f';
 
-var debug = false;
+var debug = true;
 if (debug) {
 	TIRTOS.libType = TIRTOS.LibType_Instrumented;
+	/*
 	BIOS.common$.diags_ASSERT = Diags.ALWAYS_ON;
 	BIOS.common$.diags_ENTRY = Diags.ALWAYS_ON;
 	BIOS.common$.diags_EXIT = Diags.ALWAYS_ON;
@@ -155,7 +156,7 @@ if (debug) {
 	BIOS.common$.diags_USER6 = Diags.ALWAYS_ON;
 	BIOS.common$.diags_INFO = Diags.ALWAYS_ON;
 	BIOS.common$.diags_ANALYSIS = Diags.ALWAYS_ON;
-	Defaults.common$.diags_INTERNAL = Diags.ALWAYS_ON;
+	Defaults.common$.diags_INTERNAL = Diags.ALWAYS_ON; */
 } else {
 	var ROM = xdc.useModule('ti.sysbios.rom.ROM');
 	ROM.romName = ROM.CC2650;
